--- a/index.html
+++ b/index.html
@@ -40,7 +40,11 @@
             <li>React</li>
             <li>Node.js</li>
           </ul>
-        </li></li>     </ul>
-      
+        </li></li>   
+      </ul>
+        <ul class="gallery">
+            
+        </ul>
+ 
 </body>
 </html>
