--- a/index.html
+++ b/index.html
@@ -1,50 +1,24 @@
+
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <script src="./js/task-1.js" type="module"></script>
-    <script src="./js/task-2.js" type="module"></script>
-    <script src="./js/task-3.js" type="module"></script>
-    <script src="./js/task-4.js" type="module"></script>
-    <script src="./js/task-5.js" type="module"></script>
-    <script src="./js/task-6.js" type="module"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css">
 
-    <ul id="categories">
-        <li class="item">
-          <h2 class="title">Animals</h2>
-          <ul class="element">
-            <li>Cat</li>
-            <li>Hamster</li>
-            <li>Horse</li>
-            <li>Parrot</li>
-          </ul>
-        </li>
-        <li class="item">
-          <h2 class="title">Products</h2>
-          <ul class="element">
-            <li>Bread</li>
-            <li>Parsley</li>
-            <li>Cheese</li>
-          </ul>
-        </li>
-        <li class="item">
-          <h2 class="title">Technologies</h2>
-          <ul class="element">
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JavaScript</li>
-            <li>React</li>
-            <li>Node.js</li>
-          </ul>
-        </li></li>   
-      </ul>
-        <ul class="gallery">
-            
-        </ul>
- 
-</body>
+    <title>Homework 7</title>
+    <link rel="stylesheet" href="./css/common.css" />
+  </head>
+  <body>
+    <ul>
+      <li><a href="./task-1.html">Task 1</a></li>
+      <li><a href="./task-2.html">Task 2</a></li>
+      <li><a href="./task-3.html">Task 3</a></li>
+      <li><a href="./task-4.html">Task 4</a></li>
+      <li><a href="./task-5.html">Task 5</a></li>
+      <li><a href="./task-6.html">Task 6</a></li>
+    </ul>
+  </body>
 </html>
